WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133253
REGRESSION: Rubberbanding out jumps to top left corner on google.com
https://bugs.webkit.org/show_bug.cgi?id=133253
Summary
REGRESSION: Rubberbanding out jumps to top left corner on google.com
Ian Henderson
Reported
2014-05-23 20:50:18 PDT
<
rdar://problem/17025664
> REGRESSION: Rubberbanding out jumps to top left corner on google.com
Attachments
proposed patch
(1.71 KB, patch)
2014-05-23 20:54 PDT
,
Ian Henderson
benjamin
: review+
benjamin
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ian Henderson
Comment 1
2014-05-23 20:54:42 PDT
Created
attachment 232014
[details]
proposed patch
WebKit Commit Bot
Comment 2
2014-05-23 20:56:24 PDT
Attachment 232014
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:946: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ian Henderson
Comment 3
2014-05-23 20:58:56 PDT
I haven't actually tested this yet. It works fine in Safari, though. Feel free to test it yourself before reviewing, or you can wait for me to finish updating my tree and building.
Benjamin Poulain
Comment 4
2014-05-23 21:29:53 PDT
Comment on
attachment 232014
[details]
proposed patch Great find. I'll fix the style and land manually.
Ian Henderson
Comment 5
2014-05-23 21:32:51 PDT
I finally finished building. Seems to work!
Ian Henderson
Comment 6
2014-05-23 21:33:32 PDT
(In reply to
comment #4
)
> (From update of
attachment 232014
[details]
) > Great find. I'll fix the style and land manually.
Sounds good, thanks!
Benjamin Poulain
Comment 7
2014-05-23 21:37:26 PDT
Committed
r169304
: <
http://trac.webkit.org/changeset/169304
>
Benjamin Poulain
Comment 8
2014-05-23 22:50:36 PDT
It works great :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug