REGRESSION: Rubberbanding out jumps to top left corner on google.com https://bugs.webkit.org/show_bug.cgi?id=133253 <rdar://problem/17025664>

Patch by Ian Henderson <ianh@apple.com> on 2014-05-23
Reviewed by Benjamin Poulain.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView scrollViewWillEndDragging:withVelocity:targetContentOffset:]):
Avoid deceleration during zooming to work around a UIKit bug.


Canonical link: https://commits.webkit.org/151266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169304 268f45cc-cd09-0410-ab3c-d52691b4dbfc